--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -104,79 +104,103 @@ footer {
   }
 }
 
+@media (max-width: 800px) {
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+    }
+    ul {
+      float: none;
+      padding: 0;
+      li {
+        float: none;
+        margin-left: 0;
+      }
+    }
+  }
+}
+
 /* miscellaneous */
 
 .debug_dump {
-    clear: both;
-    color: white;
-    background-color: #730E15;
-    float: left;
-    width: 100%;
-    margin-top: 45px;
-    @include box_sizing;
+  clear: both;
+  color: white;
+  background-color: #730E15;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
+
+/* sidebar */
+
+aside {
+  section.user_info {
+    margin-top: 20px;
   }
-
-  /* sidebar */
-
-  aside {
-    section.user_info {
-      margin-top: 20px;
+  section {
+    padding: 10px 0;
+    margin-top: 20px;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
     }
-    section {
-      padding: 10px 0;
-      margin-top: 20px;
-      &:first-child {
-        border: 0;
-        padding-top: 0;
-      }
-      span {
-        display: block;
-        margin-bottom: 3px;
-        line-height: 1;
-      }
-      h1 {
-        font-size: 1.4em;
-        text-align: left;
-        letter-spacing: -1px;
-        margin-bottom: 3px;
-        margin-top: 0px;
-      }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 1.4em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
     }
   }
+}
 
-  .gravatar {
-    float: left;
-    margin-right: 10px;
-  }
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
 
-  .gravatar_edit {
-    margin-top: 15px;
-  }
+.gravatar_edit {
+  margin-top: 15px;
+}
 
-  /* forms */
+/* forms */
 
-  input, textarea, select, .uneditable-input {
-    border: 1px solid #bbb;
-    width: 100%;
-    margin-bottom: 15px;
-    @include box_sizing;
-  }
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
 
-  input {
-    height: auto !important;
-  }
+input {
+  height: auto !important;
+}
 
-  #error_explanation {
+#error_explanation {
+  color: red;
+  ul {
     color: red;
-    ul {
-      color: red;
-      margin: 0 0 30px 0;
-    }
+    margin: 0 0 30px 0;
   }
+}
 
-  .field_with_errors {
-    @extend .has-error;
-    .form-control {
-      color: $state-danger-text;
-    }
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
   }
+}
+
+/* Dropdown menu */
+
+.dropdown-menu.active {
+  display: block;
+}
